# Wastepyper

./: README.md  com.builder.Wastepyper.json  com.github.medeotl.Wastepyper.json  meson.build
data/: com.builder.Wastepyper.desktop.in  com.builder.Wastepyper.gschema.xml  com.builder.Wastepyper.metainfo.xml.in  com.builder.Wastepyper.service.in  com.github.medeotl.Wastepyper.desktop.in  com.github.medeotl.Wastepyper.gschema.xml  com.github.medeotl.Wastepyper.metainfo.xml.in  com.github.medeotl.Wastepyper.service.in  meson.build
data/assets/: paper.blend
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main.py  meson.build  model.py  newTaskRow.py  newTaskRow.ui  style.css  task.py  taskRow.py  taskRow.ui  wastepyper.gresource.xml  wastepyper.in  window.py  window.ui
